removed mainframe dependency from GuiProjectSpaceManager